<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/titleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleView_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07999998"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/buttonToSubjects"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonToSubjects_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleView"
            app:layout_constraintVertical_bias="0.13" />

        <Button
            android:id="@+id/buttonAllStudents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAllStudents_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonToSubjects"
            app:layout_constraintVertical_bias="0.269" />

        <Button
            android:id="@+id/buttonRaport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonRaport_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonAllStudents" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>