<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RaportFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtViewRaportDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/raportHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/raportHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView_RaportMarks"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtViewRaportDate">

            <TextView
                android:id="@+id/headerMarkSymbolRaport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="2"
                android:text="@string/header_mark_string" />

            <TextView
                android:id="@+id/headerNoteRaport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/header_note_string" />

            <TextView
                android:id="@+id/headerSubjectRaport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/header_course_string" />

            <TextView
                android:id="@+id/headerStudentRaport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4sp"
                android:layout_weight="4"
                android:text="@string/header_student_string" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_RaportMarks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/raportHeader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>