<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditStudentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textViewStudentNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textViewNameTitle_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextStudentNameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewStudentLastNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textViewLastNameTitle_string"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextStudentLastNameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStudentNameEdit" />

        <EditText
            android:id="@+id/editTextStudentNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/textViewStudentLastNameEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStudentNameEdit" />

        <EditText
            android:id="@+id/editTextStudentLastNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/buttonEditNewStudent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStudentLastNameEdit" />

        <Button
            android:id="@+id/buttonEditNewStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/buttonSave_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStudentLastNameEdit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>